--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -14,3 +14,9 @@
   height: 2em;
 }
 
+@media (max-width: 768px){
+  #nav-search-bar.open {
+    width: 5.5em;
+  }
+}
+
